fix(sdk): remove remaining compile warnings